# aynime_issen_style

./: .gitignore  LICENSE.md  README.md  agents.md  app_wide_properties.py  aynime_issen_style.code-workspace  aynime_issen_style_app.py  aynime_issen_style_model.py  build.py  build_package.py  capture_context.py  capture_frame.py  constants.py  main.py  main.spec  main_window.py  pil_wrapper.py  pyproject.toml  requirements.txt  user_propreties.json  version_frame.py  window_selection_frame.py  windows_wrapper.py
src/gui/: aynime_issen_style_app.py  aynime_issen_style_model.py  capture_frame.py  main.py  splash_app.py  version_frame.py  window_selection_frame.py
src/gui/frames/: animation_capture_frame.py  foreign_export_frame.py  status_frame.py  still_capture_frame.py  version_frame.py  video_capture_frame.py  window_selection_frame.py
src/gui/model/: aynime_issen_style.py  capture.py  contents_cache.py
src/gui/widgets/: ais_entry.py  ais_frame.py  ais_slider.py  animation_label.py  size_pattern_selection_frame.py  still_frame.py  still_label.py  thumbnail_bar.py  video_label.py
src/utils/: ais_logging.py  capture_context.py  capture_context_windows.py  constants.py  ctk.py  duration_and_frame_rate.py  ensure_web_tool.py  ffmpeg.py  image.py  integrated_image.py  json.py  logging.py  metadata.py  pil.py  pil_wrapper.py  pyinstaller.py  std.py  user_properties.py  version_constants.py  video_encoder.py  windows.py
src/utils/capture/: __init__.py  periodic_ticker.py  stream.py  target.py
src/utils/capture/backend/: __init__.py  base.py  dummy.py  dxcam.py
(+5 files in other folders)
